name:                souvenir
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/lordao/souvenir#readme
license:             BSD3
license-file:        LICENSE
author:              Saulo Lordão Andrade Barros
maintainer:          saulo.lordao@gmail.com
copyright:           2017 Saulo Lordão Andrade Barros
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , aeson-casing
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , servant-server
                     , time
                     , wai
                     , warp
  default-language:    Haskell2010

executable souvenir-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , souvenir
  default-language:    Haskell2010

test-suite souvenir-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , souvenir
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
                     , aeson-casing
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lordao/souvenir
